# haskell-course-assistant

./: .haskell-course-assistant.cabal.un~  .travis.yml  LICENSE  README.md  haskell-course-assistant.cabal  runner.sh  stack.yaml
app/: Main.hs  Main.hs~
resources/: students-example  tasks-example
src/HaskellRobot/: Converter.hs  Converter.hs~  Runner.hs  Runner.hs~  Shuffler.hs  Shuffler.hs~  StudentSample.hs~
src/HaskellRobot/Data/: ReifiedStudent.hs  ReifiedStudent.hs~  StudentContestant.hs~  Task.hs
src/HaskellRobot/Headers/: CW1.hs  CW2.hs  Common.hs  Common.hs~
src/HaskellRobot/Parsers/: Common.hs  People.hs  People.hs~  Tasks.hs  Tasks.hs~  Utils.hs  Utils.hs~
