name:                haskell-course-assistant
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chshersh/haskell-course-assistant#readme
license:             MIT
license-file:        LICENSE
author:              chshersh
maintainer:          kovanikov@gmail.com
copyright:           2016 Dmitry Kovanikov
category:            Parsing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       HaskellRobot.Data.ReifiedStudent
                       , HaskellRobot.Data.Task

                       , HaskellRobot.Headers.Common
                       , HaskellRobot.Headers.CW1
                       , HaskellRobot.Headers.CW2

                       , HaskellRobot.Parsers.Common
                       , HaskellRobot.Parsers.People
                       , HaskellRobot.Parsers.Tasks

                       , HaskellRobot.Converter
                       , HaskellRobot.Runner
                       , HaskellRobot.Shuffler
  build-depends:         base >= 4.7 && < 5
                       , filepath
                       , formatting
                       , megaparsec
                       , MonadRandom
                       , random
                       , text
                       , HaTeX
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  default-extensions:  RecordWildCards
                     , OverloadedStrings
                     , GeneralizedNewtypeDeriving

executable assistant
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , formatting
                     , haskell-course-assistant
                     , text
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                     , OverloadedStrings
                     , GeneralizedNewtypeDeriving

source-repository head
  type:     git
  location: https://github.com/chshersh/haskell-course-assistant
